# SeGraph

./: .gitattributes  Cargo.toml  README.md
crates/benchmark/: Cargo.toml
crates/benchmark/src/: bench_runner.rs  graph_gen.rs  main.rs  neo4j_bench.rs  report.rs  system.rs  types.rs  waw_bench.rs  waw_core_bench.rs  waw_server_bench.rs
crates/waw_client/: Cargo.toml
crates/waw_client/src/: graph_client.rs  lib.rs
crates/waw_client/src/ws/: client.rs  error.rs  message.rs  mod.rs  ws.rs
crates/waw_client/src/ws/wasm/: mod.rs  stream.rs
crates/waw_core/: Cargo.toml
crates/waw_core/src/: bitfield.rs  cursor.rs  lib.rs  mutex.rs  pointer.rs  storage.rs
crates/waw_proto/: Cargo.toml
crates/waw_proto/src/: lib.rs  messages.rs  tile.rs  types.rs
crates/waw_server/: Cargo.toml
crates/waw_server/src/: cold_pool.rs  cold_tier.rs  entity_store.rs  graph_index.rs  graph_store.rs  hot_tier.rs  http.rs  lib.rs  main.rs  pipeline.rs  query_ctx.rs  spatial_index.rs  sqlite_store.rs  tile_math.rs  warm_tier.rs
