[package]
name = "benchmark"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
waw_core.workspace = true
waw_server.workspace = true
neo4rs = "0.8"
rand = "0.8"
rand_distr = "0.4"
rusqlite = { version = "0.39", features = ["bundled"] }
tempfile = "3"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
