[package]
name = "benchmark"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
waw_client.workspace = true
waw_proto.workspace = true
waw_server.workspace = true
neo4rs = "0.8"
rand = "0.10"
rand_distr = "0.6"
rusqlite = { version = "0.39", features = ["bundled"] }
tempfile = "3"
tokio = { workspace = true, features = ["net", "rt-multi-thread", "macros", "time"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "pipeline"
harness = false
