[package]
name = "waw_client"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
waw_proto.workspace = true
bytes.workspace = true
futures-util = { workspace = true, default-features = false, features = ["alloc", "sink"] }
thiserror.workspace = true
url.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["net", "time"] }
tokio-tungstenite = { version = "0.29", features = ["connect", "handshake", "rustls-tls-webpki-roots"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures-channel = { version = "0.3", default-features = false, features = ["alloc"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["BinaryType", "Blob", "CloseEvent", "Event", "MessageEvent", "WebSocket"] }
